[REF] pms: rename availability plans to pms.room.type.availability & .rules

--- a/pms/static/description/index.html
+++ b/pms/static/description/index.html
@@ -371,7 +371,7 @@ ul.auto-toc {
 <p>This module is an all-in-one property management system (PMS) focused on medium-sized hotels
 for managing every aspect of your property’s daily operations.</p>
 <p>You can manage hotel properties with multi-hotel and multi-company support, including your rooms inventory,
-reservations, check-in, daily reports, board services, rate and restriction plans among other hotel functionalities.</p>
+reservations, check-in, daily reports, board services, rate and availability plans among other hotel functionalities.</p>
 <div class="admonition important">
 <p class="first admonition-title">Important</p>
 <p class="last">This is an alpha version, the data model and design can change at any time without warning.
